force-app/main/default/objects/Form_Template__c/Form_Template__c.object-meta.xml
<CustomObject>
    <description>A form definition created in the native builder. Schema_JSON__c holds the fields (type, label, required, options, mapTo). Rendered by the dynamicForm LWC; submissions create Form_Response__c.</description>
    <label>Form Template</label>
    <nameField>
        <label>Form Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>