force-app/main/default/objects/Form_Template__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active templates are served to the public renderer.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>