force-app/main/default/objects/Form_Template__c/fields/AI_Check_Attachments__c.field-meta.xml
<CustomField>
    <fullName>AI_Check_Attachments__c</fullName>
    <label>AI Check Attachments</label>
    <description>Ask the AI to verify the uploaded files match what the form requires.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>