force-app/main/default/objects/Form_Template__c/fields/AI_Contact_Applicant__c.field-meta.xml
<CustomField>
    <fullName>AI_Contact_Applicant__c</fullName>
    <label>AI Contact Applicant</label>
    <description>Allow the AI agent to proactively email the applicant a completion link when something is missing.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>