force-app/main/default/objects/Form_Template__c/fields/AI_Insights__c.field-meta.xml
<CustomField>
    <fullName>AI_Insights__c</fullName>
    <label>AI Insights</label>
    <description>The most recently generated AI insights text for this form's results (persisted so it shows on later visits).</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>