force-app/main/default/objects/Form_Template__c/fields/AI_Insights_Generated_At__c.field-meta.xml
<CustomField>
    <fullName>AI_Insights_Generated_At__c</fullName>
    <label>AI Insights Generated At</label>
    <description>When the persisted AI insights were generated.</description>
    <type>DateTime</type>
</CustomField>