force-app/main/default/objects/Form_Template__c/fields/AI_Insights_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>AI_Insights_Record_Count__c</fullName>
    <label>AI Insights Record Count</label>
    <description>Number of submissions the persisted AI insights were computed over.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>