force-app/main/default/objects/Form_Template__c/fields/AI_Review_Enabled__c.field-meta.xml
<CustomField>
    <fullName>AI_Review_Enabled__c</fullName>
    <label>AI Review Enabled</label>
    <description>When on, submissions of this form can be reviewed by the AI agent.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>