force-app/main/default/objects/Form_Template__c/fields/AI_Review_Instructions__c.field-meta.xml
<CustomField>
    <fullName>AI_Review_Instructions__c</fullName>
    <label>AI Review Instructions</label>
    <description>What the AI agent must verify in each submission (e.g. required attachments and their content).</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>