force-app/main/default/objects/Form_Template__c/fields/Appearance_JSON__c.field-meta.xml
<CustomField>
    <fullName>Appearance_JSON__c</fullName>
    <description>Visual design config for the public form as JSON: {bgType,bgUrl,bgColor,bgColor2,overlay,cardColor,accentColor,textColor,fontFamily,maxWidth,logoUrl,align}. Consumed by the dynamicForm renderer.</description>
    <label>Appearance (JSON)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>