force-app/main/default/objects/Form_Template__c/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <label>Authority</label>
    <type>Lookup</type>
    <referenceTo>Authority__c</referenceTo>
    <relationshipLabel>Form Templates</relationshipLabel>
    <relationshipName>Form_Templates</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>