force-app/main/default/objects/Form_Template__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional description shown to the respondent.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>