force-app/main/default/objects/Form_Template__c/fields/Identity_Mode__c.field-meta.xml
<CustomField>
    <fullName>Identity_Mode__c</fullName>
    <label>Identity Mode</label>
    <description>Whether filling this form requires national-identity authentication: Anonymous, Identified (gov SSO required), or Applicant_Choice. Infrastructure for the הזדהות לאומית integration.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anonymous</fullName>
                <default>true</default>
                <label>אנונימי</label>
            </value>
            <value>
                <fullName>Identified</fullName>
                <label>מזוהה (הזדהות ממשלתית)</label>
            </value>
            <value>
                <fullName>Applicant_Choice</fullName>
                <label>לבחירת הממלא</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>