force-app/main/default/objects/Form_Template__c/fields/Person_Account_Map_JSON__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Map_JSON__c</fullName>
    <label>Person Account Map (JSON)</label>
    <description>Optional overrides for the form-field to Account-field mapping. JSON: {"map":{"formFieldKey":"AccountFieldApiName"},"matchAccountField":"...","matchFormKey":"..."}. Known personal-detail field types are auto-mapped when this is blank.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>