force-app/main/default/objects/Form_Template__c/fields/Schema_JSON__c.field-meta.xml
<CustomField>
    <fullName>Schema_JSON__c</fullName>
    <description>The form field definitions as a JSON array: [{key,label,type,required,options,mapTo}].</description>
    <label>Schema (JSON)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>