force-app/main/default/objects/Form_Template__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>Form Templates</relationshipLabel>
    <relationshipName>Form_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>