force-app/main/default/objects/Form_Template__c/fields/Shared_To_Gallery__c.field-meta.xml
<CustomField>
    <fullName>Shared_To_Gallery__c</fullName>
    <label>Shared To Gallery</label>
    <description>When true, this template is published to the shared cross-authority gallery so any authority can clone it for their own use.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>