force-app/main/default/objects/Form_Template__c/fields/Tasks_JSON__c.field-meta.xml
<CustomField>
    <fullName>Tasks_JSON__c</fullName>
    <description>Per-form task/workflow definitions as a JSON array: [{subject,priority,offsetDays,description}]. On each new Form Response, FormTaskService creates matching Task records related to the response.</description>
    <label>Tasks (JSON)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>